--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       }
       #myProfileBox {
         background-color: #ffde69;
+        color: #ffde69;
         top: 20%;
         height: 70%;
         border-radius: 5px;
@@ -17,6 +18,7 @@
       }
       #myGroupsBox {
         background-color: #78d1cc;
+        color: #78d1cc;
         top: 20%;
         height: 30%;
         border-radius: 5px;
@@ -24,6 +26,7 @@
       }
       #myMeetingsBox {
         background-color: #7640a3;
+        color: #7640a3;
         top: 60%;
         height: 30%;
         border-radius: 5px;
