--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
 
     <style>
-      body {
+      #backgroundBox {
         background-color: #fa86cb;
+        height: 100%;
+        width: 100%;
       }
       #myProfileBox {
         background-color: #ffde69;
@@ -38,11 +40,13 @@
 
 
   <body>
-    <div id="myProfileBox">
-    </div>
-    <div id="myGroupsBox">
-    </div>
-    <div id="myMeetingsBox">
+    <div id="backgroundBox">
+      <div id="myProfileBox">
+      </div>
+      <div id="myGroupsBox">
+      </div>
+      <div id="myMeetingsBox">
+      </div>
     </div>
   </body>
 
