--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
       #backgroundBox {
         background-color: #fa86cb;
-        height: 100%;
-        width: 100%;
+        height: 100px;
+        width: 100px;
       }
       #myProfileBox {
         background-color: #ffde69;
