--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
       #backgroundBox {
         background-color: #fa86cb;
-        height: 100px;
-        width: 100px;
+        height: 100vh;
+        width: 100vw;
       }
       #myProfileBox {
         background-color: #ffde69;
