--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
       #backgroundBox {
         background-color: #fa86cb;
-        height: 100vh;
-        width: 100vw;
+        height: 100%;
+        width: 100%;
       }
       #myProfileBox {
         background-color: #ffde69;
