--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         color: #ffde69;
         top: 20%;
         height: 70%;
+        left: 10%;
+        width: 20%;
         border-radius: 5px;
         position: absolute;
       }
@@ -23,6 +25,8 @@
         color: #78d1cc;
         top: 20%;
         height: 30%;
+        left: 40%;
+        width: 50%;
         border-radius: 5px;
         position: absolute;
       }
@@ -31,6 +35,8 @@
         color: #7640a3;
         top: 60%;
         height: 30%;
+        left: 40%;
+        width: 50%;
         border-radius: 5px;
         position: absolute;
       }
