--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
 
     <style>
+      html, body {
+        height: 100%; width: 100%; margin: 0;
+      }
       #backgroundBox {
         background-color: #fa86cb;
         height: 100%;
