--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 
     <style>
       html, body {
-        height: 100%; width: 100%; margin: 0;
-      }
-      #backgroundBox {
-        background-color: #fa86cb;
         height: 100%;
         width: 100%;
+        margin: 0;
+        background-color: #fa86cb;
       }
       #myProfileBox {
         background-color: #ffde69;
@@ -49,14 +47,14 @@
 
 
   <body>
-    <div id="backgroundBox">
-      <div id="myProfileBox">
-      </div>
-      <div id="myGroupsBox">
-      </div>
-      <div id="myMeetingsBox">
-      </div>
+
+    <div id="myProfileBox">
     </div>
+    <div id="myGroupsBox">
+    </div>
+    <div id="myMeetingsBox">
+    </div>
+
   </body>
 
 </html>
