--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         margin: 0;
         background-color: #fa86cb;
       }
+      .headerText {
+        font-family: league-gothic, sans-serif;
+        font-style: normal;
+        font-weight: 700;
+      }
       #myProfileBox {
         background-color: #ffde69;
         color: #ffde69;
@@ -49,10 +54,19 @@
   <body>
 
     <div id="myProfileBox">
+      <div class="headerText">
+        ABOUT ME
+      </div>
     </div>
     <div id="myGroupsBox">
+      <div class="headerText">
+        MY GROUPS
+      </div>
     </div>
     <div id="myMeetingsBox">
+      <div class="headerText">
+        UPCOMING MEETINGS
+      </div>
     </div>
 
   </body>
