--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         font-family: league-gothic, sans-serif;
         font-style: normal;
         font-weight: 700;
+        color: white;
       }
       #myProfileBox {
         background-color: #ffde69;
