--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
       }
       .headerText {
         font-family: league-gothic, sans-serif;
-        font-style: normal;
+        font-size: 20px;
         font-weight: 700;
         color: white;
+      }
+      #myProfileBoxHeader {
+        padding-left: 5%;
+        font-weight: 700;
+        border-bottom: 5px solid white;
+      }
+      #myGroupsBoxHeader {
+        padding-left: 5%;
+        font-weight: 700;
+        border-bottom: 5px solid white;
+      }
+      #myMeetingsHeader {
+        padding-left: 5%;
+        font-weight: 700;
+        border-bottom: 5px solid white;
       }
       #myProfileBox {
         background-color: #ffde69;
@@ -55,18 +70,24 @@
   <body>
 
     <div id="myProfileBox">
-      <div class="headerText">
-        ABOUT ME
+      <div id="myProfileBoxHeader">
+        <div class="headerText">
+          MY PROFILE
+        </div>
       </div>
     </div>
     <div id="myGroupsBox">
-      <div class="headerText">
-        MY GROUPS
+      <div id="myGroupsBoxHeader">
+        <div class="headerText">
+          MY GROUPS
+        </div>
       </div>
     </div>
     <div id="myMeetingsBox">
-      <div class="headerText">
-        UPCOMING MEETINGS
+      <div id="myMeetingsBoxHeader">
+        <div class="headerText">
+          MY MEETINGS
+        </div>
       </div>
     </div>
 
