--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         margin: 0;
         background-color: #fa86cb;
       }
+      @font-face {
+        font-family: 'league-gothic';
+        src: url('league-gothic.regular.ttf');
+      }
       .headerText {
         font-family: league-gothic, sans-serif;
         font-size: 20px;
