--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
       }
       #myProfileBoxHeader {
         padding-left: 5%;
-        font-weight: 700;
+        width: 50%;
         border-bottom: 5px solid white;
       }
       #myGroupsBoxHeader {
         padding-left: 5%;
-        font-weight: 700;
+        width: 50%;
         border-bottom: 5px solid white;
       }
       #myMeetingsHeader {
         padding-left: 5%;
-        font-weight: 700;
+        width: 50%;
         border-bottom: 5px solid white;
       }
       #myProfileBox {
