--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
       }
       #myProfileBoxHeader {
         padding-left: 5%;
+        padding-top: 5%;
         width: 50%;
         border-bottom: 5px solid white;
       }
       #myGroupsBoxHeader {
         padding-left: 5%;
+        padding-top: 5%;
         width: 50%;
         border-bottom: 5px solid white;
       }
-      #myMeetingsHeader {
+      #myMeetingsBoxHeader {
         padding-left: 5%;
+        padding-top: 5%;
         width: 50%;
         border-bottom: 5px solid white;
       }
