--- a/index.html
+++ b/index.html
@@ -25,19 +25,22 @@
         padding-left: 5%;
         padding-top: 5%;
         width: 50%;
-        border-bottom: 5px solid white;
+        left: 2%;
+        border-bottom: 3px solid white;
       }
       #myGroupsBoxHeader {
-        padding-left: 5%;
-        padding-top: 5%;
+        padding-left: 4%;
+        padding-top: 3%;
         width: 50%;
-        border-bottom: 5px solid white;
+        left: 2%;
+        border-bottom: 3px solid white;
       }
       #myMeetingsBoxHeader {
-        padding-left: 5%;
-        padding-top: 5%;
+        padding-left: 4%;
+        padding-top: 3%;
         width: 50%;
-        border-bottom: 5px solid white;
+        left: 2%;
+        border-bottom: 3px solid white;
       }
       #myProfileBox {
         background-color: #ffde69;
