--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         width: 30%;
         border-bottom: 3px solid white;
       }
-
       #myProfileBox {
         background-color: #ffde69;
         color: #ffde69;
@@ -70,6 +69,11 @@
         border-radius: 10px;
         position: absolute;
       }
+      #profilePicContainer {
+        top: 10%;
+        width: 80%;
+        left: 10%;
+      }
     </style>
 
   </head>
@@ -81,6 +85,9 @@
       <div id="myProfileBoxHeader">
         <div class="headerText">
           MY PROFILE
+        </div>
+        <div id="profilePicContainer">
+          <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" width="100%" height="40%">
         </div>
       </div>
     </div>
