--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div id="profilePicContainer">
-        <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" width="100%" height="40%">
+        <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" width="80%" height="40%" left="10%">
       </div>
     </div>
     <div id="myGroupsBox">
