--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
         position: absolute;
       }
       #profilePicContainer {
-        top: 10%;
-        width: 80%;
-        left: 10%;
+        top: 5%;
+        width: 70%;
+        left: 15%;
+        position: relative;
       }
     </style>
 
@@ -88,7 +89,7 @@
         </div>
       </div>
       <div id="profilePicContainer">
-        <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" width="80%" height="40%" left="10%">
+        <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" width="100%" height="40%">
       </div>
     </div>
     <div id="myGroupsBox">
