--- a/index.html
+++ b/index.html
@@ -71,9 +71,22 @@
       }
       #profilePicContainer {
         top: 5%;
-        width: 70%;
-        left: 15%;
+        width: 60%;
+        left: 20%;
         position: relative;
+      }
+      #profileInfoContainer {
+        top: 10%;
+        width: 80%;
+        left: 10%;
+        position: relative;
+        text-align: center;
+      }
+      .profileText {
+        font-family: league-gothic, sans-serif;
+        font-size: 14px;
+        font-weight: 500;
+        color: white;
       }
     </style>
 
@@ -90,6 +103,14 @@
       </div>
       <div id="profilePicContainer">
         <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" width="100%" height="40%">
+      </div>
+      <div id="profileInfoContainer">
+        <div class="profileText">
+          Firstname Lastname
+        </div>
+        <div class="profileText">
+          Timezone: EDT - Eastern Daylight Time (UTC -4)
+        </div>
       </div>
     </div>
     <div id="myGroupsBox">
