--- a/index.html
+++ b/index.html
@@ -88,6 +88,31 @@
         font-weight: 500;
         color: white;
       }
+
+      #timezoneButtonContainer {
+        padding-top: 10%;
+        position: relative;
+      }
+
+      #timezoneButton {
+        padding: 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        background-color: white;
+        color: #a6a6a6;
+        border: 2px solid #a6a6a6;
+        border-radius: 25px;
+      }
+
+      #timezoneButton:hover {
+        background-color: #a6a6a6;
+        color: white;
+      }
     </style>
 
   </head>
@@ -109,8 +134,14 @@
           Firstname Lastname
         </div>
         <div class="profileText">
+          &nbsp;
+        </div>
+        <div class="profileText">
           Timezone: EDT - Eastern Daylight Time (UTC -4)
         </div>
+        <div id="timezoneButtonContainer">
+          <button type="button" id="timezoneButton">Change Timezone</button>
+          </div>
       </div>
     </div>
     <div id="myGroupsBox">
