--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
         font-weight: 700;
         color: white;
       }
+      #logoTopLeft {
+        top: 4%;
+        height: 5%;
+        left: 5%;
+        width: 5%;
+        position: absolute;
+      }
+      #profilePicTopRight {
+        top: 4%;
+        height: 5%;
+        right: 5%;
+        width: 5%;
+        position: absolute;
+      }
       #myProfileBoxHeader {
         padding-left: 8%;
         padding-top: 5%;
@@ -119,7 +133,12 @@
 
 
   <body>
-
+    <div id="logoTopLeft">
+      <img src="https://hoonchang.github.io/hackourcampus2020/logo.png" alt="Logo" width="100%" height="40%">
+    </div>
+    <div id="profilePicTopRight">
+      <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" width="100%" height="40%">
+    </div>
     <div id="myProfileBox">
       <div id="myProfileBoxHeader">
         <div class="headerText">
