--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
       }
       #logoTopLeft {
         top: 4%;
-        height: 5%;
+        height: 7%;
         left: 5%;
-        width: 5%;
         position: absolute;
       }
       #profilePicTopRight {
         top: 4%;
-        height: 5%;
-        right: 5%;
-        width: 5%;
+        height: 7%;
+        right: 6%;
         position: absolute;
       }
       #myProfileBoxHeader {
@@ -134,10 +132,10 @@
 
   <body>
     <div id="logoTopLeft">
-      <img src="https://hoonchang.github.io/hackourcampus2020/logo.png" alt="Logo" width="100%" height="40%">
+      <img src="https://hoonchang.github.io/hackourcampus2020/logo.png" alt="Logo" max-width="100%" height="100%">
     </div>
     <div id="profilePicTopRight">
-      <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" width="100%" height="40%">
+      <img src="https://hoonchang.github.io/hackourcampus2020/profilepic.png" alt="Profile Picture" max-width="100%" height="100%">
     </div>
     <div id="myProfileBox">
       <div id="myProfileBoxHeader">
