--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-
+    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
     <style>
       html, body {
         height: 100%;
@@ -53,7 +53,7 @@
       }
       #myProfileBox {
         background-color: #ffde69;
-        color: #ffde69;
+        color: white;
         top: 15%;
         height: 75%;
         left: 5%;
@@ -63,7 +63,7 @@
       }
       #myGroupsBox {
         background-color: #78d1cc;
-        color: #78d1cc;
+        color: white;
         top: 15%;
         height: 35%;
         left: 33%;
@@ -73,7 +73,7 @@
       }
       #myMeetingsBox {
         background-color: #7640a3;
-        color: #7640a3;
+        color: white;
         top: 55%;
         height: 35%;
         left: 33%;
@@ -125,12 +125,39 @@
         background-color: #a6a6a6;
         color: white;
       }
+      #myGroupsContainer {
+        top: 5%;
+        left: 5%;
+        position: relative;
+        width: 90%;
+      }
+      #myMeetingsContainer {
+
+      }
+      .groupBlock {
+        background-color: black;
+        color: white;
+        height: 100%;
+        width: 100%;
+        border-radius: 5px;
+        position: relative;
+        padding-top: 30%;
+        padding-bottom: 30%;
+        text-align: center;
+      }
+      .meetingBlock {
+
+      }
     </style>
 
   </head>
 
 
   <body>
+
+
+
+
     <div id="logoTopLeft">
       <img src="https://hoonchang.github.io/hackourcampus2020/logo.png" alt="Logo" max-width="100%" height="100%">
     </div>
@@ -167,6 +194,24 @@
           MY GROUPS
         </div>
       </div>
+      <div id="myGroupsContainer">
+          <div class="glide">
+            <div class="glide__track" data-glide-el="track">
+              <ul class="glide__slides">
+                <li class="glide__slide"><div class="groupBlock">group 1</div></li>
+                <li class="glide__slide"><div class="groupBlock">group 2</div></li>
+                <li class="glide__slide"><div class="groupBlock">group 3</div></li>
+                <li class="glide__slide"><div class="groupBlock">group 4</div></li>
+                <li class="glide__slide"><div class="groupBlock">group 5</div></li>
+
+              </ul>
+            </div>
+            <div class="glide__arrows" data-glide-el="controls">
+              <button class="glide__arrow glide__arrow--left" data-glide-dir="<">&lt;</button>
+              <button class="glide__arrow glide__arrow--right" data-glide-dir=">">&gt;</button>
+            </div>
+          </div>
+        </div>
     </div>
     <div id="myMeetingsBox">
       <div id="myMeetingsBoxHeader">
@@ -175,6 +220,16 @@
         </div>
       </div>
     </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+  <script>
+  	const config = {
+    	type: 'carousel',
+      perView: 3
+    }
+    new Glide('.glide', config).mount()
+  </script>
 
   </body>
 
