--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
-    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
+    <link rel="stylesheet" type="text/css" href="glide.css">
     <style>
       html, body {
         height: 100%;
