--- a/index.html
+++ b/index.html
@@ -141,18 +141,24 @@
         width: 100%;
         border-radius: 5px;
         position: relative;
-        padding-top: 20%;
-        padding-bottom: 20%;
+        padding-top: 15%;
+        padding-bottom: 15%;
         text-align: center;
       }
       .groupBlockTitle {
         font-family: league-gothic, sans-serif;
-        font-size: 12px;
+        font-size: 15px;
+        font-weight: 500;
+        color: white;
+      }
+      .spacer {
+        font-family: league-gothic, sans-serif;
+        font-size: 10px;
         font-weight: 500;
         color: white;
       }
       .groupBlockButton {
-        padding: 8px 16px;
+        padding: 4px 8px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
@@ -227,30 +233,32 @@
                     <div class="groupBlockTitle">
                       group 1
                     </div>
-                    <button type="button" class="groupBlockButton">Group Details</button>
-
-
-
+                    <div class="spacer">
+                      &nbsp;
+                    </div>
+                    <button type="button" class="groupBlockButton">Details</button>
                   </div>
                 </li>
                 <li class="glide__slide">
                   <div class="groupBlock">
-                    group 2
+                    <div class="groupBlockTitle">
+                      group 2
+                    </div>
+                    <div class="spacer">
+                      &nbsp;
+                    </div>
+                    <button type="button" class="groupBlockButton">Details</button>
                   </div>
                 </li>
                 <li class="glide__slide">
                   <div class="groupBlock">
-                    group 3
-                  </div>
-                </li>
-                <li class="glide__slide">
-                  <div class="groupBlock">
-                    group 4
-                  </div>
-                </li>
-                <li class="glide__slide">
-                  <div class="groupBlock">
-                    group 5
+                    <div class="groupBlockTitle">
+                      group 3
+                    </div>
+                    <div class="spacer">
+                      &nbsp;
+                    </div>
+                    <button type="button" class="groupBlockButton">Details</button>
                   </div>
                 </li>
 
