--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="glide.css">>
+    <link rel="stylesheet" type="text/css" href="glide.css">
     <style>
       html, body {
         height: 100%;
