--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
       }
       .groupBlock {
-        background-color: black;
-        color: white;
+        background-color: #d1e8e7;
+        color: #a6a6a6;
         height: 100%;
         width: 100%;
         border-radius: 5px;
@@ -148,8 +148,8 @@
       .groupBlockTitle {
         font-family: league-gothic, sans-serif;
         font-size: 15px;
-        font-weight: 500;
-        color: white;
+        font-weight: 700;
+        color: #a6a6a6;;
       }
       .spacer {
         font-family: league-gothic, sans-serif;
