--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         color: white;
       }
       #myGroupsContainer {
-        top: 5%;
+        top: 2%;
         left: 5%;
         position: relative;
         width: 90%;
@@ -149,7 +149,7 @@
         font-family: league-gothic, sans-serif;
         font-size: 15px;
         font-weight: 700;
-        color: #a6a6a6;;
+        color: white;
       }
       .spacer {
         font-family: league-gothic, sans-serif;
@@ -167,12 +167,12 @@
         transition-duration: 0.4s;
         cursor: pointer;
         background-color: white;
-        color: #a6a6a6;
-        border: 2px solid #a6a6a6;
+        color: #78d1cc;
+        border: 2px solid #78d1cc;
         border-radius: 25px;
       }
       .groupBlockButton:hover {
-        background-color: #a6a6a6;
+        background-color: #78d1cc;
         color: white;
       }
       .meetingBlock {
