--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       </div>
       <div id="profileInfoContainer">
         <div class="profileText">
-          Firstname Lastname
+          Ezra Cornell
         </div>
         <div class="profileText">
           &nbsp;
