--- a/index.html
+++ b/index.html
@@ -102,28 +102,7 @@
         font-weight: 400;
         color: white;
       }
-      #timezoneButtonContainer {
-        padding-top: 8%;
-        position: relative;
-      }
-      #timezoneButton {
-        padding: 8px 16px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 14px;
-        margin: 4px 2px;
-        transition-duration: 0.4s;
-        cursor: pointer;
-        background-color: white;
-        color: #a6a6a6;
-        border: 2px solid #a6a6a6;
-        border-radius: 25px;
-      }
-      #timezoneButton:hover {
-        background-color: #a6a6a6;
-        color: white;
-      }
+
       #myGroupsContainer {
         top: 2%;
         left: 5%;
@@ -166,10 +145,12 @@
         color: #78d1cc;
         border: 2px solid #78d1cc;
         border-radius: 25px;
+        outline:none;
       }
       .groupBlockButton:hover {
         background-color: #78d1cc;
         color: white;
+        outline:none;
       }
       .spacer {
         font-family: league-gothic, sans-serif;
@@ -213,11 +194,59 @@
         color: #7640a3;
         border: 2px solid #7640a3;
         border-radius: 25px;
+        outline:none;
       }
       .meetingBlockButton:hover {
         background-color: #7640a3;
         color: white;
+        outline:none;
       }
+      .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  text-align: center;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 8px 12px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+
+#timezoneButtonContainer {
+  padding-top: 8%;
+  position: relative;
+}
+#timezoneButton {
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: white;
+  color: #a6a6a6;
+  border: 2px solid #a6a6a6;
+  border-radius: 25px;
+  outline:none;
+}
+#timezoneButton:hover {
+  background-color: #a6a6a6;
+  color: white;
+  outline:none;
+}
     </style>
 
   </head>
@@ -250,7 +279,19 @@
           Timezone: EDT - Eastern Daylight Time (UTC -4)
         </div>
         <div id="timezoneButtonContainer">
-          <button type="button" id="timezoneButton">Change Timezone</button>
+          <div class="dropdown">
+  <button onclick="myFunction()" id="timezoneButton">Change Timezone</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#PDT">PDT</a>
+    <a href="#MDT">MDT</a>
+    <a href="#CDT">CDT</a>
+    <a href="#CEST">CEST</a>
+    <a href="#IST">IST</a>
+    <a href="#CST">CST</a>
+    <a href="#KST">KST</a>
+    <a href="#JST">JST</a>
+  </div>
+</div>
         </div>
       </div>
     </div>
@@ -361,11 +402,34 @@
       </div>
     </div>
 
+  <script>
+/* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('#timezoneButton')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
+
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
   <script>
     const sliders = document.querySelectorAll('.glide')
     const conf = {
     	type: 'carousel',
+      autoplay: 2000,
       perView: 3
     }
     sliders.forEach(item => {
