--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
       .dropdown-content {
   display: none;
   position: absolute;
+  left: 11%;
+
   background-color: #f1f1f1;
   min-width: 160px;
   overflow: auto;
@@ -288,8 +290,6 @@
     <a href="#CEST">CEST</a>
     <a href="#IST">IST</a>
     <a href="#CST">CST</a>
-    <a href="#KST">KST</a>
-    <a href="#JST">JST</a>
   </div>
 </div>
         </div>
