--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       .dropdown-content {
   display: none;
   position: absolute;
-  left: 11%;
+  left: 15%;
 
   background-color: #f1f1f1;
   min-width: 160px;
@@ -278,7 +278,7 @@
           &nbsp;
         </div>
         <div class="profileText">
-          Timezone: EDT - Eastern Daylight Time (UTC -4)
+          Timezone: EDT (UTC -4)
         </div>
         <div id="timezoneButtonContainer">
           <div class="dropdown">
